# NFC_Attendence

./: App.js  BLACKBOX_README.md  app.json  app.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: __init__.py  models.py  schemas.py  views.py
backend/jwtapi/: admin.py  views.py
backend/jwtapi/migrations/: 0003_alter_meeting_club.py
backendnfc/: asgi.py  settings.py  urls.py  wsgi.py
backendnfc/jwtapi/: urls.py
instance/: db.sqlite
jwtapi/: models.py  urls.py  views.py
jwtapi/migrations/: 0001_initial.py  0002_meeting_club.py
nfc_attendence/: settings.py
nfcapp/: pubspec.yaml
nfcapp/android/app/: build.gradle
nfcapp/ios/Runner/: Info.plist
nfcapp/ios/Runner.xcodeproj/: project.pbxproj
nfcapp/linux/: CMakeLists.txt
nfcapp/macos/Runner.xcodeproj/: project.pbxproj
nfcapp/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
nfcapp/macos/Runner/Configs/: AppInfo.xcconfig
nfcapp/web/: index.html
nfcapp/windows/: CMakeLists.txt
nfcapp/windows/runner/: Runner.rc
